--- a/.gitignore
+++ b/.gitignore
@@ -110,6 +110,7 @@ mvenv/
 ENV/
 env.bak/
 venv.bak/
+*.pic
 
 # Spyder project settings
 .spyderproject
@@ -128,3 +129,7 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# my
+models/
+texts/
